2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/optcond-13.pk: New test.
	* testsuite/poke.pkl/optcond-14.pk: Likewise.
	* testsuite/poke.pkl/optcond-15.pk: Likewise.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion_type-1): New test.
	(tab-completion-var-1): Likewise.
	(tab-completion-fun-1): Likewise.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (sigint-returns-to-prompt-2): New
	test.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (slashes-are-preserved-1): Renamed
	from "slashes are preserved".
	(ctrl-c-returns-to-prompt-1): Remove.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_send_signal): New proc.
	* testsuite/poke.repl/repl.exp (sigint-returns-to-prompt): New
	test.
	* testsuite/poke.repl/repl.exp (ctrl-c-returns-to-prompt):
	Likewise.
	* HACKING (Writing REPL tests): Document poke_send_signal.

2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi:  Don't capitalise or indent "Where ..."

2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* src/pk-set.c (set_completion_function): Fix bug which was
	exposed by recent test: tab-completion-subcommand-1.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion-subcommand-1): Use
	poke_send instead of poke_test_cmd.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_exit): Make sure to discard any
	previous input before issuing the `exit' command.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Writing REPL tests): Mention poke_send.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_send): New proc.
	* testsuite/poke.repl/repl.exp (tab-completion-2): New test.
	* HACKING (Command REPL tests): New subsection.
	(General REPL tests): Likewise.
