@@ -46,6 +46,11 @@ poke_start
 poke_send ".set oba\t" ".set obase"
 poke_exit
 
+set test "tab-completion-subcommand-2"
+poke_start
+poke_send ".doc Struct Co\t\t" "\r\nStruct Comparison    Struct Constructors"
+poke_exit
+
 set test "sigint-returns-to-prompt-1"
 poke_start
 poke_send "while (1) {}\n" {}
